--- a/GUI3.7.ipynb
+++ b/GUI3.7.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "753bcecd-994c-49e2-be18-922050188703",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2s/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 966ms/step\n"
      ]
     }
    ],
@@ -42,7 +42,7 @@
     "CLASS_LABELS = ['Bacterial Pneumonia', 'Corona Virus Disease', 'Normal', 'Tuberculosis', 'Viral Pneumonia']\n",
     "\n",
     "# OpenCage API Key \n",
-    "API_KEY = \"5fa7428842fd4e2c95d7615297268a95\"\n",
+    "API_KEY = \"#Enter your OpenCage API key here\"\n",
     "\n",
     "def open_chatbot():\n",
     "    result_text = result_label.cget(\"text\")\n",
@@ -77,8 +77,8 @@
     "        connection = mysql.connector.connect(\n",
     "            host=\"localhost\",  # or your DB host\n",
     "            user=\"root\",\n",
-    "            password=\"t49hornet\",\n",
-    "            database=\"lung_disease_detection\"\n",
+    "            password=\"#Enter your MySQL password here\",  \n",
+    "            database=\"#Enter your database name here\"\n",
     "        )\n",
     "        cursor = connection.cursor(dictionary=True)\n",
     "        cursor.execute(\"SELECT * FROM diseases WHERE name = %s\", (predicted_disease,))\n",
@@ -381,8 +381,8 @@
     "    return mysql.connector.connect(\n",
     "        host=\"localhost\", \n",
     "        user=\"root\",  \n",
-    "        password=\"t49hornet\",  \n",
-    "        database=\"lung_disease_detection\"\n",
+    "        password=\"#Enter your MySQL password here\",  \n",
+    "        database=\"#Enter your database name here\"\n",
     "    )\n",
     "\n",
     "# Preprocess image function\n",
